# cargo-factorio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/cargo-factorio/: Cargo.toml
crates/cargo-factorio/src/: build.rs  cli.rs  config.rs  error.rs  init.rs  main.rs
crates/cargo-factorio/tests/: build_integration.rs  cli.rs
crates/factorio/: Cargo.toml
crates/factorio-api/: Cargo.toml  build.rs
crates/factorio-api-gen/: .gitignore  Cargo.toml
crates/factorio-api-gen/api/: prototype-api.json  runtime-api.json
crates/factorio-api-gen/src/: lib.rs  main.rs  schema.rs  schema_prototype.rs
crates/factorio-api-gen/src/generate/: classes.rs  concepts.rs  debug_types.rs  defines.rs  event_filters.rs  events.rs  ident.rs  mod.rs  prototypes.rs  types.rs
crates/factorio-api-gen/tests/: generate.rs  prototypes.rs
crates/factorio-api/src/: .gitignore  lib.rs  prototypes.rs  settings.rs
crates/factorio-codegen/: Cargo.toml
crates/factorio-codegen/src/: generator.rs  pack.rs
crates/factorio-codegen/tests/: associated_paths.rs  collections.rs  control_flow.rs  debug.rs  enums.rs  errors.rs  expressions.rs  imports.rs  ir_variants.rs  method_dispatch.rs  method_syntax.rs  module_generation.rs  optimize_ir.rs  precedence.rs  print.rs  proptest_emit.rs  recipe_type.rs  structs.rs  technology_type.rs  trailing_nil.rs  traits.rs
crates/factorio-frontend/: Cargo.toml
crates/factorio-frontend/src/: bindings.rs  discovery.rs  error.rs  lib.rs  lower.rs  paths.rs  report.rs
crates/factorio-frontend/src/lower/: assembling_machines.rs  attrs.rs  context.rs  convert.rs  event_filter.rs  event_handler.rs  expressions.rs  fluids.rs  functions.rs  imports.rs  items.rs  iterators.rs  locale.rs  meta_markers.rs  metadata.rs  mod.rs  mod_settings.rs  print.rs  recipes.rs  serde_json.rs  statements.rs  structs.rs  technologies.rs  test_steps.rs  tests.rs  types.rs  util.rs
crates/factorio-frontend/tests/: control_flow.rs  convert.rs  doc_comments.rs  enum_method_call.rs  enums.rs  export.rs  expressions.rs  fluid_and_machine_macros.rs  functions.rs  hello_world.rs  imports.rs  inline_attr.rs  item_macro.rs  lints.rs  locale.rs  matches_macro.rs  module.rs  nested_modules.rs  print.rs  result.rs  structs.rs  submodules.rs  technology_macro.rs
crates/factorio-frontend/tests/common/: mod.rs
crates/factorio-ir/: Cargo.toml
crates/factorio-ir/src/: block.rs  enumeration.rs  expression.rs  function.rs  lib.rs  lint.rs  literal.rs  locale.rs  module.rs  operator.rs  prune.rs  stage.rs  statement.rs  structure.rs
crates/factorio-macros/: Cargo.toml  build.rs
crates/factorio-macros/src/: lib.rs
crates/factorio-playground/src/: lib.rs
crates/factorio-playground/tests/: examples_smoke.rs
crates/factorio-rs/: Cargo.toml
crates/factorio-rs-cli/: Cargo.toml
crates/factorio-rs-cli/src/: add.rs  api_crate.rs  assets.rs  bindings.rs  build.rs  cargo_manifest.rs  cli.rs  commands.rs  config.rs  error.rs  init.rs  install.rs  locale.rs  main.rs  manifest.rs  open.rs  package.rs  paths.rs  progress.rs  status.rs
crates/factorio-rs-cli/tests/: build_integration.rs  cli.rs
crates/factorio-rs/src/: lib.rs  test.rs
crates/factorio/src/: lib.rs
docs/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: CNAME  llms.txt  robots.txt
docs/src/: routeData.ts
docs/src/sidebars/: gui.mjs
ecosystem/: Cargo.toml
ecosystem/factorio-rs-gui/: .gitignore  Cargo.toml  Factorio.toml  README.md
ecosystem/factorio-rs-gui/src/: factorio_exports.rs  lib.rs
ecosystem/factorio-rs-gui/src/shared/: align.rs  button.rs  checkbox.rs  drop_down.rs  empty_widget.rs  flow.rs  frame.rs  line.rs  mod.rs  prelude.rs  progress_bar.rs  runtime.rs  scroll_pane.rs  slider.rs  sprite.rs  sprite_button.rs  state.rs  text.rs  text_field.rs  widget.rs
examples/consumer/: .gitignore  Cargo.toml  Factorio.toml
examples/consumer/.factorio-rs/: libraries.json
examples/consumer/src/: lib.rs
examples/gui_basics/: Cargo.toml  Factorio.toml
examples/gui_basics/src/: lib.rs
examples/gui_counter/: .gitignore  Cargo.toml  Factorio.toml  bacon.toml
examples/gui_widgets/: Cargo.toml  Factorio.toml
examples/hello_world/: Cargo.toml  Factorio.toml
examples/locale_test/: Cargo.toml  Factorio.toml
examples/mandatory_spaghetti/: .gitignore  Cargo.toml  Factorio.toml
examples/provider/: .gitignore  Cargo.toml  Factorio.toml
examples/provider/src/: lib.rs
examples/provider/src/shared/: api.rs
examples/tracing_test/: Cargo.toml  Factorio.toml
scripts/: publish.sh
(+150 files in other folders)
