[package]
name = "cargo-factorio"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "cargo-factorio"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
factorio-codegen.workspace = true
factorio-frontend.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.25.0"

[lints]
workspace = true
