[package]
name = "factorio-api-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Generates Rust bindings from Factorio runtime-api.json"
publish = false

[dependencies]
convert_case = "0.8.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { workspace = true }
serde_json = "1.0.145"

[[bin]]
name = "factorio-api-gen"
path = "src/main.rs"

[lints]
workspace = true
