[package]
name = "factorio-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
factorio-ir.workspace = true

syn = { version = "2.0.114", features = ["full"] }
thiserror.workspace = true

[dev-dependencies]
factorio-codegen = { path = "../factorio-codegen" }

[lints]
workspace = true
