[package]
name = "provider"
version = "0.1.4"
edition = "2024"
publish = false

[package.metadata]

[package.metadata.factorio]
mod_name = "provider"
dependencies = ["provider >= 0.1.4"]
module_root = "lua"
interface = "provider"
remote_fns = ["greet"]

[lib]
path = "src/lib.rs"

[dependencies]
factorio-rs = { path = "../../crates/factorio-rs" }
